# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2016-10-08
  * Fix bug #433 throwing exception when applying scale limits in bad order
  * Optimization : changeStyle was applying the new style two times
  * Fix #432 Zipped datasource should be unmodifiable

2016-10-08 Giuseppe Aruta  <giuseppe_aruta@yahoo.it>
  * Upgraded Sextante (Correct bug #410. Added Sextante Data Explorer)

2016-10-07 mmichaud <m.michael.michaud@orange.fr>
  * Fix SaveLayersWithoutDataSourcePlugIn by using JFileChooser instead of
    JFCWithEnterAction

2016-10-06 ede
  * PLUS: update ImageIO-Ext to 1.1.15, GDAL binding to 2.1.0 

2016-10-06 mmichaud <m.michael.michaud@orange.fr>
  * Use URI_KEY and FILE_KEY properties for file based datasources
    in order to keep compatibility with legacy plugins
  * fix #428 (introduced during ProjUtil refactoring)

2016-10-05 mmichaud <m.michael.michaud@orange.fr>
  * Fix #431 : Save project with unsaved layers

2016-10-04 Giuseppe Aruta  <giuseppe_aruta@yahoo.it>
  * Added checkbox to EditOptionPanel that select the geometry after 
    it has been drawn

2016-10-03 mmichaud <m.michael.michaud@orange.fr>
  * Make RemoveSpikePlugIn more robust

2016-10-01 mmichaud <m.michael.michaud@orange.fr>
  * Dxf writer has been broken for a while. It is fixed with 0.8.1
    but it can no more save several files at a time
  * Fix bug introduced in r5032 in postgis reader

2016-09-25 mmichaud <m.michael.michaud@orange.fr>
  * Fix in H2 Database Writer

2016-09-22 mmichaud <m.michael.michaud@orange.fr>
  * Add getAttributeNames() to FeatureSchema

2016-09-21 mmichaud <m.michael.michaud@orange.fr>
  * Postgis writer : create the sequence in the same schema as the table
  * Postgis writer : normalize index name

2016-09-17 mmichaud <m.michael.michaud@orange.fr>
  * FR #235 : Improved ExtractLayersByGeometryPlugIn